<resources>
    <string name="app_name">Mankomania</string>
    <string name="color_red">Rot</string>
    <string name="color_black">Schwarz</string>
    <string name="choose_roulette_color">Auf welche Farbe möchtest du setzen?</string>
    <string name="roulette_won">Du hast %1$d gewonnen</string>
    <string name="roulette_lost">Du hast %1$d verloren</string>
    <string name="roulette_welcome">Willkommen beim Roulette! Worauf möchtest du setzen?</string>
    <string name="roulette_set_color">auf Farbe setzen</string>
    <string name="roulette_set_number">auf Zahl setzen</string>
    <string name="roulette_set_dozen">auf ein Dutzend setzen</string>
    <string name="roulette_set_money">Einsatz: %1$d€</string>
    <string name="roulette_choose_number">Auf welche Zahl möchtest du setzen?</string>
    <string name="roulette_enter_number">Zahl eingeben</string>
    <string name="roulette_set">Setzen!</string>
    <string name="roulette_choose_dozen">Auf welches Dutzend möchtest du setzen?</string>
    <string name="roulette_first_dozen">1 &#8211; 12</string>
    <string name="roulette_second_dozen">13 &#8211; 24</string>
    <string name="roulette_third_dozen">25 &#8211; 36</string>
    <string name="roulette_back">Zurück</string>
    <string name="roulette_black">schwarz</string>
    <string name="roulette_red">rot</string>
    <string name="roulette_green">grün</string>
    <string name="roulette_result">Die Zahl lautet %1$s, die Farbe ist %2$s.</string>
    <string name="roulette_invalid_number">Ungültige Zahl!</string>
    <string name="roulette_enter_number_between">Bitte gib eine Zahl zwischen 0 und 36 ein!</string>
    <string name="casino_ok">OK</string>
    <string name="display_ip">Display IP</string>
    <string name="to_game">zum Spielfeld</string>
    <string name="connect_to_lobby">Einem Spiel beitreten</string>
    <string name="create_lobby">Ein Spiel erstellen</string>
    <string name="display_server_ip">Server wurde mit der IP %1$s gestartet</string>
    <string-array name="player_array">
        <item>Einzelspieler</item>
        <item>Zwei Spieler</item>
        <item>Drei Spieler</item>
        <item>Vier Spieler</item>
    </string-array>
    <string name="lobby_wait">Auf Spieler warten</string>
    <string name="image_of_dice">Image of Dice</string>
    <string name="left_player_field">Left Player Field</string>
    <string name="right_player_field">Right Player Field</string>
    <string name="background_of_game">Background of Game</string>
    <string name="figure_of_player_1">Figure of Player 1</string>
    <string name="figure_of_player_2">Figure of player 2</string>
    <string name="figure_of_player_3">Figure of Player 3</string>
    <string name="figure_of_player_4">Figure of Player 4</string>
    <string name="lottery_toast">Du bist über die Lotterie gegangen, du verlierst 5000</string>
    <string name="mini_map_OK">OK</string>
    <string name="mini_map_title">Mini Map</string>
    <string name="cheat">Cheat</string>
    <string name="lottery_won">Du bekommst %d€ vom Lottofeld!</string>
    <string name="lottery_lost">Die Lotterie ist leer, du darfst selbst 50000€ einzahlen!</string>
    <string name="change_money">Dein Kontostand ändert sich auf %d</string>
    <string name="stock_change">Du erhälst Aktie  %s</string>
    <string name="change_hotel">Du erhälst das Hotel  %s</string>
    <string name="change_hotel_buy">Spieler  %d erhält das Hotel %s</string>
    <string name="dice_change">Player %d diced %d</string>
    <string name="change_stock_buy">Spieler %d erhält Aktie  %s</string>
    <string name="lotto_change">Lotto ändert sich auf %d</string>
    <string name="want_stock">Wollen sie eine Aktie der Firma %s kaufen?</string>
    <string name="yes_excl">JA!</string>
    <string name="no_excl">NEIN!</string>
    <string name="blame">Spieler %d hat Spieler %d beschuldigt. %s</string>
    <string name="cheated_successfully">Spieler %d hat geschummelt, ohne dass ihr es gemerkt habt!!</string>
    <string name="want_hotel">Wollen sie das Hotel %s kaufen?</string>
    <string name="title_activity_you_win">YouWin</string>
    <string name="player_own">Spieler %d hat gewonnen!</string>
    <string name="pay_rent">Du musst 1000€ miete zahlen!</string>
    <string name="einem_spiel_beitreten">Einem Spiel beitreten</string>
    <string name="name_label">Name</string>
    <string name="save">Speichern</string>
</resources>
